[update] 최신순으로 일정 조회되게 수정 #9